# srcinst

./: Builder.hs  COPYRIGHT  Dpkg.hs  Makefile  Utils.hs  srcinst.cabal  srcinst.hs
debian/: README.Debian  changelog  control  copyright  dirs  rules
